--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "description": "Express server with CRA, ESLint, Git Hooks and Prettier",
   "main": "server.js",
   "scripts": {
+    "postinstall": "cd client && npm install",
+    "build": "cd client && npm run build",
     "test": "npm run lint && cd client && npm test",
     "prettify": "prettier --write .",
     "lint": "eslint . --ext .js",
