--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged",
-      "pre-push": "npm test"
+      "pre-push": "CI=true npm test"
     }
   },
   "lint-staged": {
